Excess memory allocation when projecting onto object with multires #38354

Closed
opened 2014-01-24 20:29:20 +01:00 by Shane Ambler · 6 comments

System Information
FreeBSD 9.2 Geforce GT520

Blender Version
Broken: 2.69.10 - 456dc16
Working: 2.69 release

Short description of error
When using snap to face of another object that has a multires modifier, memory allocation continuously rises while moving vertices. I have seen allocation of 4G within one minute if vertex count is high enough.

Exact steps for others to reproduce the error
Load factory settings
Select Cube
Ctrl-3 to add a subsurf then apply modifier (adding verts for quicker memory allocation)
Add a multires modifier (leave unsubdivided for now)
Add a new cube object
Enter edit mode and subdivide a few times
Enable snapping to face and project to other objects
Select a vertex (or a few) and move

Watch blender's memory usage in the info header
At this stage memory usage should be stable.

Exit edit mode and select initial Cube
Click subdivide in the multires modifier (repeat for speed up)
Return to Cube.001 and enter edit mode
Grab a vertex and move

Watch memory usage increase.

The more vertices in the object with a multires the quicker the memory allocation.

On quitting blender I also get a message like --
Error: Not freed memory blocks: 41848

**System Information** FreeBSD 9.2 Geforce GT520 **Blender Version** Broken: 2.69.10 - 456dc16 Working: 2.69 release **Short description of error** When using snap to face of another object that has a multires modifier, memory allocation continuously rises while moving vertices. I have seen allocation of 4G within one minute if vertex count is high enough. **Exact steps for others to reproduce the error** Load factory settings Select Cube Ctrl-3 to add a subsurf then apply modifier (adding verts for quicker memory allocation) Add a multires modifier (leave unsubdivided for now) Add a new cube object Enter edit mode and subdivide a few times Enable snapping to face and project to other objects Select a vertex (or a few) and move Watch blender's memory usage in the info header At this stage memory usage should be stable. Exit edit mode and select initial Cube Click subdivide in the multires modifier (repeat for speed up) Return to Cube.001 and enter edit mode Grab a vertex and move Watch memory usage increase. The more vertices in the object with a multires the quicker the memory allocation. On quitting blender I also get a message like -- Error: Not freed memory blocks: 41848
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sambler

Added subscriber: @sambler

This issue was referenced by blender/blender-addons-contrib@afb9393dda

This issue was referenced by blender/blender-addons-contrib@afb9393ddad3c57e99a5df13a74969c192a023f5

This issue was referenced by afb9393dda

This issue was referenced by afb9393ddad3c57e99a5df13a74969c192a023f5
Bastien Montagne self-assigned this 2014-01-26 16:58:16 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit afb9393dda.

Closed by commit afb9393dda.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38354
No description provided.