Fix T38354: Excess memory allocation when projecting onto object with multires

Found three cases where created bvhtree was not freed...